--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ludo PWA",
+  "name": "HT Etude Admin",
   "short_name": "Ludo",
   "start_url": "./index.html",
   "display": "standalone",
